--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   />
   <title>Kazuha Discord Bot</title>
   <link rel="shortcut icon" href="/Gaurav/kazuha logo" type="image/x-icon">
-  <link rel="stylesheet" href="/Gaurav/Gaurav.css" />
+  <link rel="stylesheet" href="style.css" />
  </head>
  <body>
   <nav>
