--- a/index.html
+++ b/index.html
@@ -211,6 +211,6 @@
     <img id="img" src="/Gaurav/Landing Photo.webp" alt="IMG" />
    </div>
   </div>
-  <script src="/Gaurav/Hamburgur.js"></script>
+  <script src="script.js"></script>
  </body>
 </html>
