Changed path Media to HTML

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
    rel="stylesheet"
   />
   <title>Kazuha Discord Bot</title>
-  <link rel="shortcut icon" href="/Gaurav/kazuha logo" type="image/x-icon">
+  <link rel="shortcut icon" href="kazuha logo" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
  </head>
  <body>
   <nav>
-   <div class="logo"><img src="/Gaurav/kazuha logo" alt="LOGO" /></div>
+   <div class="logo"><img src="kazuha logo" alt="LOGO" /></div>
    <div class="openMenu"><i class="fa fa-bars"></i></div>
    <ul class="mainMenu" style="top: -110%; display: flex">
     <li><a href="#home">Home</a></li>
@@ -208,7 +208,7 @@
     </a>
    </div>
    <div id="pic" class="box">
-    <img id="img" src="/Gaurav/Landing Photo.webp" alt="IMG" />
+    <img id="img" src="Landing Photo.webp" alt="IMG" />
    </div>
   </div>
   <script src="script.js"></script>
